# Accounts-Export-VAT-MTD-Bridge

./: .gitignore  CMakeLists.txt  LICENCE  QUALITY  README  TC-mingw.cmake  index.html
data/: Exported Data - MTD Test Set 1.csv  MTD Test Set 1.txt
include/: Mtd100PcVatFreeOutput.h  ProcessSolarExport.h  SolarMtdBridge_version.h.in  VatDate.h
libs/: README
output/: mtd100PcVatFreeInput.csv  mtd100PcVatFreeInput.txt
src/: CMakeLists.txt  Mtd100PcVatFreeOutput.cpp  ProcessSolarExport.cpp  VatDate.cpp  main.cpp
tests/: gtest-verify.cpp  test_ProcessSolarExport.cpp  test_VatDate.cpp
utility/: GenerateVersionHeader.cmake
